t+fo:[[massi]] ([[WT:EDIT|Assisted]]) <weight#14258968>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -144,7 +144,7 @@
 * Armenian: {{t-|hy|զանգված|tr=zangvaç}}
 * Czech: {{t-|cs|váha|f}}
 * Danish: {{t|da|vægt|c}}, {{t|da|masse|c}}
-* Faroese: {{t|fo|vekt|f}}
+* Faroese: {{t|fo|vekt|f}}, {{t|fo|massi|m}}
 * Finnish: {{t+|fi|paino}}
 * French: {{t+|fr|masse}}
 * German: {{t+|de|Masse|f}}
