/* Translations */ translit fr <blow#14271176>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -261,7 +261,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * [[Catalan]]: [[llepar]]
 * Dutch: {{t+|nl|pijpen}}
 * Finnish: {{t|fi|ottaa suihin}}
-* French: {{t|fr|sucer}}, [[tailler]] une {{t|fr|pipe}} 
+* French: {{t|fr|sucer}}, [[tailler]] une {{t|fr|pipe}} (''to hew, or to grave, a smoking pipe'')
 * German: {{t|de|blasen}}
 * Korean: [[아양떨다]] (ayang-tteolda)
 {{trans-mid}}
