--- a/en/o/onesie-twosie.741286.wikitext
+++ b/en/o/onesie-twosie.741286.wikitext
@@ -6,4 +6,4 @@
 # {{idiomatic}} [[individually|Individually]] or in very small groups, rather in larger [[batches]]. 
 #:''Why don't you prepare a whole stack of handouts in advance rather than getting out the supplies each time, '''onsie-twosie'''?''
 
-CDW sells onesie twosie bundle deals supplied by jonathan banks
+2. Jonathan banks- The creator of the "onsie twosie" sales model at CDW.
