--- a/en/i/indeterminable.742104.wikitext
+++ b/en/i/indeterminable.742104.wikitext
@@ -7,6 +7,11 @@
 # That is incapable of being [[measure]]d
 # That is incapable of being [[ascertain]]ed
 
+===Noun===
+{{en-noun}}
+
+# An indeterminable thing or quantity.
+
 ====Antonyms====
 * [[determinable]]
 
