/* Verb */ Makeover? <abassar#14298992>

--- a/en/a/abassar.4115.wikitext
+++ b/en/a/abassar.4115.wikitext
@@ -1,12 +1,13 @@
 ==Interlingua==
 
 ===Verb===
-'''abassar'''
+{{ia-verb|ar}}
 
 # to [[lower]], to [[abase]]
 #: abassar un perpendicular [Geom.]: to drop a perpendicular
 
-[[Category:Interlingua verbs]]
+====Conjugation====
+{{ia-conj|abass|ar}}
 
 [[fr:abassar]]
 [[ia:abassar]]
