--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -19,6 +19,9 @@ From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|la
 #*:It was only when Einstein's '''theory''' of relativity was published in 1915 that physicists could show that Mercury's "anomaly" was actually because Newton's gravitational '''theory''' was incomplete.
 #*'''2003''', {{w|Bill Bryson}}, ''A Short History of Nearly Everything'', BCA, p. 118:
 #*:The world would need additional decades [...] before the Big Bang would begin to move from interesting idea to established '''theory'''.
+#*'''2005''', Ronald H. Pine, http://www.csicop.org/specialarticles/show/intelligent_design_or_no_model_creationism, 15 October 2005:
+#*:Misunderstanding on the part of most people as to what the word "theory" means in science has probably caused more trouble than anything else in getting it across to the public that evolution is as well-supported as any principle in science. ...Most people tend to think of the word "theory" as meaning pretty much the same thing as their concept of "hypothesis"—namely, a guess or surmise. A "theory" is thought of as a very tentative proposition. This is only natural, because that is the "ordinary English" meaning of the word outside of scientific contexts, and our citizens' educational experiences have rarely done anything to disabuse them of this notion. As I define "scientific theory," it is a great, overarching, explanatory scheme which explains a vast number of phenomena; which makes connections between phenomena that would otherwise be perceived as having nothing to do with each other; which makes wild, off-the-wall predictions which nonetheless turn out as forecast; which is supported by an overwhelming amount of evidence and has been tested countless times in countless ways without being falsified; shows consilience to a truly remarkable extent; and which is, for all practical purposes, universally accepted by the scientific community. A scientific theory has ''content'', in spades. 
+
 # {{uncountable}} The underlying [[principle]]s or [[method]]s of a given technical skill, [[art]] etc., as opposed to its [[practice]]. {{defdate|from 17th c.}}
 #*'''1990''', Tony Bennett, ''Outside Literature'', p. 139:
 #*:Does this mean, then, that there can be no such thing as a '''theory''' of literature?
