/* Noun */ emphasize "explains"; add "used more loosely" for "hypothesis" <theory#14306447>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -14,7 +14,7 @@ From {{etyl|LL.}} {{term|lang=la|theoria|theōria}}, from {{etyl|grc}} {{term|la
 # {{obsolete}} Mental [[conception]]; [[reflection]], [[consideration]]. {{defdate|16th-18th c.}}
 #*'''1646''', {{w|Thomas Browne}}, ''Pseudodoxia Epidemica'', VII.19:
 #*:As they encrease the hatred of vice in some, so doe they enlarge the '''theory''' of wickednesse in all.
-# In [[scientific]] usage, '''theory''' is a [[term of art]], meaning a [[coherent]] [[statement]] or set of ideas that [[explain]]s [[observe]]d [[fact]]s or [[phenomenon|phenomena]], or which sets out the [[law]]s and principles of something known or observed; a [[hypothesis]] ''confirmed'' by observation, experiment etc.  {{defdate|from 17th c.}} Compare to [[law]] and [[hypothesis]].
+# In [[scientific]] usage, '''theory''' is a [[term of art]], meaning a [[coherent]] [[statement]] or set of ideas that ''[[explain]]s'' [[observe]]d [[fact]]s or [[phenomenon|phenomena]], or which sets out the [[law]]s and principles of something known or observed; used more loosely, a [[hypothesis]] ''confirmed'' by observation, experiment etc.  {{defdate|from 17th c.}} Compare to [[law]] and [[hypothesis]].
 #*'''2002''', Duncan Steel, ''The Guardian'', 23 May 2002:
 #*:It was only when Einstein's '''theory''' of relativity was published in 1915 that physicists could show that Mercury's "anomaly" was actually because Newton's gravitational '''theory''' was incomplete.
 #*'''2003''', {{w|Bill Bryson}}, ''A Short History of Nearly Everything'', BCA, p. 118:
