--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|fr|en}} {{term|grognard||lang=fr|grumbler}}
+From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
 
 ===Noun===
 {{en-noun}}
