--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -7,10 +7,10 @@
 {{etyl|ang}} {{term|lang=ang|igland|īġland}}.  The S was added by confusion with {{etyl|fro}} {{term|lang=fr|isle}}, which is not related but is instead from {{etyl|la}} {{term|lang=la|insula}}.  Cognate with {{etyl|de|-}} {{term|lang=de|Aue||water-meadow}} and {{etyl|la|-}} {{term|lang=la|aqua}}.  Compare {{etyl|nl|-}} {{term|lang=nl|eiland}}, {{etyl|de|-}} {{term|lang=de|Eiland}}, Old Norse ''[[eyland]]'' and {{etyl|en|-}} {{term|lang=en|ey}} as in [[Anglesey]], [[Bardsey]], [[Ely]].
 
 ===Pronunciation===
-* {{IPA|/ˈaɪlænd/}}
+* {{IPA|/ˈaɪlənd/}}
 * {{audio|en-us-island.ogg|Audio (US)}}
 * {{audio|En-uk-island.ogg|Audio (UK)}}
-* {{rhymes|ænd}}
+* {{rhymes|ənd}}
 
 ===Noun===
 {{en-noun}}
