--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -68,6 +68,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * Japanese: [[賭ける]] ([[かける]], kakeru)
 * [[Macedonian]]: {{t|mk|се коцка|tr=se kócka}}
 * Portuguese: {{t+|pt|arriscar}}
+* Russian: {{t|ru|рисковать|tr=riskovát'|sc=Cyrl}}
 * {{trreq|Turkish}}
 * [[Walloon]]: fé ene {{t|wa|wadjeure}}
 {{trans-bottom}}
@@ -78,9 +79,10 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * Finnish: {{t|fi|uhkapelata}}
 * German: {{t+|de|wetten}}, {{t+|de|spielen}}, {{qualifier|slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
-{{trans-mid}}
 * Japanese: [[賭ける]] ([[かける]], ''kakeru'')
+{{trans-mid}}
 * [[Macedonian]]: {{t|mk|се коцка|tr=se kócka}}
+* Russian: {{t|ru|играть в азартные игры|tr=igrát' v azártnyje ígry|sc=Cyrl}}
 * Spanish: {{t|es|apostar}}, {{t|es|jugar}}
 * [[Walloon]]: {{t|wa|trimler}}
 {{trans-bottom}}
