t+de:[[Hazardspiel]] t+ru:[[азартная игра]] t-balance t+ja:[[賭け]] t+ja:[[ギャンブル]] t+ru:[[авантюра]] ([[WT:EDIT|Assisted]]) <gamble#14453530>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -22,20 +22,22 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * Dutch: {{t+|nl|gok|m}}
 * Finnish: {{t+|fi|uhkapeli}}
 * French: {{t+|fr|pari|m}}
-* German: {{t+|de|Glücksspiel|n}}
-{{trans-mid}}
+* German: {{t+|de|Glücksspiel|n}}, {{t|de|Hazardspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
-* Japanese: [[賭け]] ([[かけ]], ''kake''), [[ギャンブル]] (''gyanburu'')
+{{trans-mid}}
+* Japanese: [[賭け]] ([[かけ]], ''kake''), [[ギャンブル]] (''gyanburu''), {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
 * [[Macedonian]]: {{t-|mk|коцка|f|tr=kócka}},  {{t-|mk|комар|m|tr=kómar}}
 * Polish: {{t+|pl|hazard|m}}
+* Russian: {{t|ru|азартная игра|f|tr=azártnaja igrá|sc=Cyrl}}, {{t|ru|авантюра|f|tr=avantjúra|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|a risky venture}}
 * Dutch: [[gok]] {{m}}, [[waagstuk]] {{n}}
 * Finnish: {{t+|fi|uhkapeli}}
-{{trans-mid}}
 * German: {{t+|de|Glücksspiel|n}}
+{{trans-mid}}
 * Japanese: [[賭け]] ([[かけ]], ''kake''), [[ギャンブル]] (''gyanburu'')
+* Russian: {{t|ru|авантюра|f|tr=avantjúra|sc=Cyrl}}
 {{trans-bottom}}
 
 {{checktrans-top}}
