--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -25,7 +25,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * German: {{t+|de|Glücksspiel|n}}, {{t|de|Hazardspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
 {{trans-mid}}
-* Japanese: [[賭け]] ([[かけ]], ''kake''), [[ギャンブル]] (''gyanburu''), {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
+* Japanese: {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
 * [[Macedonian]]: {{t-|mk|коцка|f|tr=kócka}},  {{t-|mk|комар|m|tr=kómar}}
 * Polish: {{t+|pl|hazard|m}}
 * Russian: {{t|ru|азартная игра|f|tr=azártnaja igrá|sc=Cyrl}}, {{t|ru|авантюра|f|tr=avantjúra|sc=Cyrl}}
@@ -36,7 +36,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 * Finnish: {{t+|fi|uhkapeli}}
 * German: {{t+|de|Glücksspiel|n}}
 {{trans-mid}}
-* Japanese: [[賭け]] ([[かけ]], ''kake''), [[ギャンブル]] (''gyanburu'')
+* Japanese: {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
 * Russian: {{t|ru|авантюра|f|tr=avantjúra|sc=Cyrl}}
 {{trans-bottom}}
 
