--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -38,6 +38,7 @@ From {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} 
 * Italian: {{t+|it|si}},  {{t+|it|già}}
 {{trans-mid}}
 * Japanese: {{t-|ja|うん|tr=un}},  {{t+|ja|そう|tr=sō}},  {{t+|ja|ええ|tr=ē}},  {{t+|ja|ああ|tr=ā}}
+* Korean: {{t|ko|네|sc=Kore}}, {{t|ko|예|sc=Kore}}, {{t|ko|응|sc=Kore}}
 * Navajo: {{tø|nv|wehee}}
 * Norwegian: {{t|no|ja}}
 * Persian: {{t+|fa|بله}}
