t+fr:[[jeu de hasard]] ([[WT:EDIT|Assisted]]) <gamble#14504175>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -21,7 +21,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 {{trans-top|a risk undertaken with a potential gain}}
 * Dutch: {{t+|nl|gok|m}}
 * Finnish: {{t+|fi|uhkapeli}}
-* French: {{t+|fr|pari|m}}
+* French: {{t+|fr|pari|m}}, {{t|fr|jeu de hasard|m}}
 * German: {{t+|de|Glücksspiel|n}}, {{t|de|Hazardspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
 {{trans-mid}}
