--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -52,6 +52,19 @@ From the prefix [[mega-]].
 
 ----
 
+==Esperanto==
+{{ordinalbox|eo||1,000,000a||card=meg}}
+
+===Etymology===
+From {{term|meg}}
+
+===Ordinal number===
+{{eo-adj}}
+
+# {{ordinal|lang=eo}} alternative form of [[miliona]]
+
+----
+
 ==Faroese==
 
 ===Verb===
