/* References */ See also <cop#14612133>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -101,6 +101,8 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 ===References===
 * {{R:BBS}}
 
+===See also===
+*''[[not much cop]]''
 ----
 
 ==Catalan==
