/* Adjective */  -> noun; alt form <banana-bender#14619943>

--- a/en/b/banana-bender.775337.wikitext
+++ b/en/b/banana-bender.775337.wikitext
@@ -1,9 +1,8 @@
 ==English==
 
-===Adjective===
-'''banana-bender'''
+===Noun===
+{{en-noun}}
 
-# {{form of|Attributive form|[[banana bender]]|nodot=1}}, ''noun''.
-#: ''&nbsp;''
+# {{alternative form of|[[banana bender]]|nodot=1}}.
 
 [[Category:English adjectives]]
