--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -117,6 +117,7 @@
 * [[Maléku Jaíka]]: {{tø|gut|tunhífa}}
 * Maori: {{t-|mi|poaka|xs=Maori}}
 * [[Mazanderani]]: {{tø|mzn|خی}}
+* [[Montagnais]]: {{tø|moe|kukush}}
 * [[Nahuatl]]: {{t-|nah|pitzotl|xs=Nahuatl}}
 * Navajo: {{tø|nv|bisóodi}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
