--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -99,8 +99,8 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Ladino]]: [[konejo]]
 * Latin: {{t+|la|cuniculus|alt=cunīculus|m}}
 * Latvian: [[trusis]]
-{{trans-mid}}
 * Lithuanian: {{t+|lt|triušis|xs=Lithuanian}}
+{{trans-mid}}
 * [[Lower Sorbian]]: [[karnikel]]
 * [[Macedonian]]: [[заjак]] (zajak) {{m}}
 * Malay: {{t+|ms|arnab|xs=Malay}}
@@ -108,6 +108,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Manx]]: {{t|gv|conning|f}}
 * [[Marathi]]: [[ससा]] {{m}}, [[सशी]] {{f}}
 * [[Maricopa]]: {{tø|mrc|xalyaw}}
+* [[Montagnais]]: {{tø|moe|uapush}}
 * [[Nahuatl]]: [[tochtli]]
 * Navajo: {{tø|nv|gah}}
 * [[Northern Sami]]: [[kaniidna]]
