--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -100,6 +100,9 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 
 # [[#English|minimum]]
 
+====Derived terms====
+* [[minimum syndical]]
+
 ====Usage notes====
 * The 1990 spelling reform recommends that the plural of minimum should be [[minimums]].
 
