--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -16,6 +16,7 @@
 * Finnish: {{t|fi|rahanlainaaja}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|agiota|c}}
+* Russian: {{t|ru|ростовщик|m|sc=Cyrl|tr=rostovščík|alt=ростовщи́к}}
 {{trans-bottom}}
 
 [[et:moneylender]]
