t+ru:[[вес]] t+zh:[[重量]] t-balance t+zh:[[配重]] t+ar:[[ثقل]] t+zh:[[砝碼]] t+zh:[[砝码]] ([[WT:EDIT|Assisted]]) <weight#15124390>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -54,6 +54,8 @@
 {{trans-top|force due to gravity}}
 * Arabic: {{t+|ar|وزن|alt=وَزْن|tr=wazn}}
 * Armenian: {{t-|hy|կշիռ|tr=kšiṙ}},  {{t|hy|քաշ|tr=k’aš}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
+* Chinese:
+*: Mandarin: {{t|zh|重量|tr=zhòngliàng|sc=Hani}}
 * Chinese (Simplified): [[重量]] (zhòng liàng)
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t-|eo|pezo|xs=Esperanto}}
@@ -64,14 +66,14 @@
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n|tr=város}}
 * Hungarian: {{t+|hu|súly}}
-* [[Ido]]: {{t+|io|pezo|xs=Ido}}
 {{trans-mid}}
+* [[Ido]]: {{t+|io|pezo|xs=Ido}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t-|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t|ja|体重|tr=taijū}}
 * Latvian: {{t|lv|svars|m}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t-|ro|greutate|f}}
-* Russian: [[вес]] (v'es) {{m}}
+* Russian: [[вес]] (v'es) {{m}}, {{t|ru|вес|m|tr=ves|sc=Cyrl}}
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
 * [[Scottish Gaelic]]: {{t|gd|cudrom|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
@@ -83,6 +85,8 @@
 {{trans-top|object to make something heavier}}
 * Arabic: [[ثقل]]
 * Armenian: {{t+|hy|բեռ|tr=beṙ}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
+* Chinese:
+*: Mandarin: {{t|zh|配重|tr=pèizhòng|sc=Hani}}
 * Chinese (Simplified): [[配重]] (pèi zhòng)
 * Czech: {{t-|cs|závaží|n}}
 * Dutch: {{t+|nl|gewicht}}
@@ -90,8 +94,8 @@
 * French: {{t+|fr|poids}}, {{t|fr|lest|m}}
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n|tr=város}}
-* Hungarian: {{t+|hu|súly}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|súly}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
 * Latvian: {{t|lv|svars|m}}
@@ -104,15 +108,17 @@
 {{trans-bottom}}
 
 {{trans-top|measuring weights}}
-* Arabic: [[ثقل]]
+* Arabic: [[ثقل]], {{t|ar|ثقل|m|tr=ṯiql|sc=Arab}}
 * Armenian: {{t|hy|կշռաքար|tr=kšṙak'ar}}
+* Chinese:
+*: Mandarin: {{t|zh|砝碼|sc=Hani}}, {{t|zh|砝码|tr=fámǎ|sc=Hani}}
 * Chinese (Simplified): [[砝码]] (fá mǎ)
 * Estonian: {{t|et|kaaluma}}
 * Finnish: [[punnus]]
 * French: {{t|fr|poids|m}}
+{{trans-mid}}
 * Greek: {{t+|el|ζύγι|n|tr=zíγi}}, {{t|el|σταθμά|n|p|tr=staθmá}}, {{t|el|σταθμίον|n|tr=staθmíon}}
 * Hungarian: {{t+|hu|súly}}
-{{trans-mid}}
 * Japanese: {{t|ja|分銅|tr=fundō}}
 * Korean: {{t|ko|체중|tr=chejung|sc=Kore}}
 * Russian: {{t+|ru|гиря|f|tr=gír'a}}
