--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -56,7 +56,6 @@
 * Armenian: {{t-|hy|կշիռ|tr=kšiṙ}},  {{t|hy|քաշ|tr=k’aš}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
 * Chinese:
 *: Mandarin: {{t|zh|重量|tr=zhòngliàng|sc=Hani}}
-* Chinese (Simplified): [[重量]] (zhòng liàng)
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t-|eo|pezo|xs=Esperanto}}
 * Estonian: {{t-|et|kaal}}
@@ -73,13 +72,13 @@
 * Latvian: {{t|lv|svars|m}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t-|ro|greutate|f}}
-* Russian: [[вес]] (v'es) {{m}}, {{t|ru|вес|m|tr=ves|sc=Cyrl}}
+* Russian: {{t|ru|вес|m|tr=ves|sc=Cyrl}}
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
 * [[Scottish Gaelic]]: {{t|gd|cudrom|m}}
 * Swedish: {{t+|sv|tyngd|c}}, {{t+|sv|vikt|c}}
 * [[Telugu]]: [[భారము]] (bhaaramu),  {{t|te|బరువు|tr=baruvu}}
 * Turkish: {{t+|tr|ağırlık}}
-* Ukrainian: [[вага]] (wah'''a''') {{f}}
+* Ukrainian: {{t|uk|вага|f|tr=váha|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|object to make something heavier}}
@@ -87,7 +86,6 @@
 * Armenian: {{t+|hy|բեռ|tr=beṙ}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
 * Chinese:
 *: Mandarin: {{t|zh|配重|tr=pèizhòng|sc=Hani}}
-* Chinese (Simplified): [[配重]] (pèi zhòng)
 * Czech: {{t-|cs|závaží|n}}
 * Dutch: {{t+|nl|gewicht}}
 * Finnish: {{t+|fi|paino}}
@@ -108,11 +106,10 @@
 {{trans-bottom}}
 
 {{trans-top|measuring weights}}
-* Arabic: [[ثقل]], {{t|ar|ثقل|m|tr=ṯiql|sc=Arab}}
+* Arabic: {{t|ar|ثقل|m|tr=ṯiql|sc=Arab}}
 * Armenian: {{t|hy|կշռաքար|tr=kšṙak'ar}}
 * Chinese:
 *: Mandarin: {{t|zh|砝碼|sc=Hani}}, {{t|zh|砝码|tr=fámǎ|sc=Hani}}
-* Chinese (Simplified): [[砝码]] (fá mǎ)
 * Estonian: {{t|et|kaaluma}}
 * Finnish: [[punnus]]
 * French: {{t|fr|poids|m}}
@@ -121,7 +118,7 @@
 * Hungarian: {{t+|hu|súly}}
 * Japanese: {{t|ja|分銅|tr=fundō}}
 * Korean: {{t|ko|체중|tr=chejung|sc=Kore}}
-* Russian: {{t+|ru|гиря|f|tr=gír'a}}
+* Russian: {{t+|ru|гиря|f|tr=gírja}}
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
 * Spanish: {{t|es|peso|m}}
 * Swedish: {{t+|sv|vikt|c}}
@@ -129,7 +126,7 @@
 {{trans-bottom}}
 
 {{trans-top|sport device}}
-* Arabic: [[ثقل]]
+* Arabic: {{t|ar|ثقل|m|tr=ṯiql|sc=Arab}}
 * Finnish: {{t+|fi|paino}}, {{t+|fi|puntti}}
 * French: {{t|fr|poids|m}}
 * German: {{t+|de|Gewicht|n}}
@@ -138,7 +135,7 @@
 * Italian: {{t+|it|peso|m}}
 {{trans-mid}}
 * Japanese: {{t|ja|重り|tr=omori}}
-* Russian: [[блин]] (blin) {{m}} ''disc'', [[гиря]] (gír'a) {{f}} ''dumbbell'', [[гантель]] (gantél') {{f}} ''barbell''
+* Russian: {{t+|ru|блин|m|tr=blin}}, {{t+|ru|гиря|f|tr=gírja}} ''dumbbell'', {{t+|ru|гантель|f|tr=gantɛ́l’}} ''barbell''
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
 * Spanish: {{t-|es|pesa|f}}
 * Swedish: {{t+|sv|vikt|c}}
@@ -146,7 +143,7 @@
 {{trans-bottom}}
 
 {{trans-top|physics: mass}}
-* Arabic: {{t+|ar|وزن}}
+* Arabic: {{t+|ar|وزن|alt=وَزْن|tr=wazn}}
 * Armenian: {{t-|hy|զանգված|tr=zangvaç}}
 * Czech: {{t-|cs|váha|f}}
 * Danish: {{t|da|vægt|c}}, {{t|da|masse|c}}
@@ -159,7 +156,7 @@
 * Hungarian: {{t+|hu|tömeg}}
 * Italian: {{t+|it|massa|f}}
 * Japanese: {{t-|ja|重さ|tr=omosa}}, {{t+|ja|重量|tr=jūryō}}, {{t|ja|荷重|tr=kajū}}
-* Russian: [[вес]] (v'es) {{m}}, [[масса]] (mássa) {{f}}
+* Russian: {{t|ru|вес|m|tr=ves|sc=Cyrl}}, {{t|ru|масса|f|tr=mássa|sc=Cyrl}}
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
 * Slovak: {{t|sk|váha|f}}
 * Spanish: {{t+|es|masa|f}}
@@ -168,15 +165,16 @@
 {{trans-bottom}}
 
 {{trans-top|statistics: statistical value}}
-* Arabic: {{t+|ar|وزن}}
+* Arabic: {{t+|ar|وزن|alt=وَزْن|tr=wazn}}
 * Armenian: {{t-|hy|կշիռ|tr=kšiṙ}}
-* Chinese (Simplified): [[权重]] (quán zhòng)
+* Chinese:
+*: Mandarin: {{t|zh|權重|sc=Hani}}, {{t|zh|权重|tr=quánzhòng|sc=Hani}}
 * Finnish: [[painoarvo]], [[painokerroin]], [[paino]]
 * Hungarian: {{t+|hu|súly}},  {{t|hu|súlyozás}}
 {{trans-mid}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t-|ja|重さ|tr=omosa}}, {{t|ja|重み|tr=omomi}}
-* Russian: [[вес]] (v'es) {{m}}
+* Russian: {{t|ru|вес|m|tr=ves|sc=Cyrl}}
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
 {{trans-bottom}}
 
