--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -54,8 +54,10 @@
 {{trans-top|force due to gravity}}
 * Arabic: {{t+|ar|وزن|alt=وَزْن|tr=wazn}}
 * Armenian: {{t-|hy|կշիռ|tr=kšiṙ}},  {{t|hy|քաշ|tr=k’aš}},  {{t-|hy|ծանրություն|tr=çanrut’yun}}
+* Belarusian: {{t|be|вага|f|tr=váha|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|zh|重量|tr=zhòngliàng|sc=Hani}}
+* Czech: {{t|cs|váha|f}}
 * Dutch: {{t+|nl|gewicht}}
 * Esperanto: {{t-|eo|pezo|xs=Esperanto}}
 * Estonian: {{t-|et|kaal}}
@@ -70,6 +72,7 @@
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t-|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t|ja|体重|tr=taijū}}
 * Latvian: {{t|lv|svars|m}}
+* Polish: {{t|pl|waga|f}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t-|ro|greutate|f}}
 * Russian: {{t|ru|вес|m|tr=ves|sc=Cyrl}}
