--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -67,10 +67,11 @@
 * German: {{t+|de|Gewicht|n}}
 * Greek: {{t+|el|βάρος|n|tr=város}}
 * Hungarian: {{t+|hu|súly}}
-{{trans-mid}}
 * [[Ido]]: {{t+|io|pezo|xs=Ido}}
+{{trans-mid}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t-|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t|ja|体重|tr=taijū}}
+* Korean: {{t|ko|중량|tr=jungnyang|sc=Kore}}
 * Latvian: {{t|lv|svars|m}}
 * Polish: {{t|pl|waga|f}}
 * Portuguese: {{t+|pt|peso}}
