--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -71,7 +71,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t-|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t|ja|体重|tr=taijū}}
-* Korean: {{t|ko|중량|tr=jungnyang|sc=Kore}}
+* Korean: {{t|ko|중량|tr=jungnyang|sc=Kore}} ({{t|ko|重量|sc=Kore}})
 * Latvian: {{t|lv|svars|m}}
 * Polish: {{t|pl|waga|f}}
 * Portuguese: {{t+|pt|peso}}
