--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -1,10 +1,16 @@
 ==English==
 
+===Etymology===
+{{compound|moon|struck}}
+
 ===Adjective===
 {{en-adj}}
 
-# {{obsolete}} [[crazy]] or [[insane]] when affected by the [[phase]]s of the [[moon]]
+# {{obsolete}} [[crazy]] or [[insane]] when affected by the [[phase]]s of the [[Moon]]
 # {{context|by extension}} Showing [[irrational]] behaviour, especially of a [[romantic]] or [[sentimental]] nature
+# {{obsolete}} Made sick, or (like fishes) unsuitable for food, by the supposed [[influence]] of the Moon.
+
+{{webster}}
 
 ====Synonyms====
 * [[moonstricken]]
