--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -1,4 +1,4 @@
-rabbits are adorable animals. 
+rabbits are adorable animals.rabbits can jump. 
 
 
 # Several small [[mammal]]s of the family ''[[Leporidae]]'' (rabbits and [[hare]]s), with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
