--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -59,14 +59,8 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 #::: I go for a trip once a '''month'''.  
 
 ====Derived terms====
-* {{l|ja|月野姫}} ({{l|ja|つきのひめ}}, ''[[tsuki]]-no-[[hime]]''): lit. the "''[[princess]] of the [[moon]]''" -- see ''Kaguya-hime'' from ''[[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]''
-* {{l|ja|月野都}} ({{l|ja|つきのみやこ}}, ''tsuki-no-miyako''): lit. the "''([[capital]]) [[city]] of the [[moon]]''" -- from [[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]
-* {{l|ja|月野王国}} ({{l|ja|つきのおうこく}}, ''tsuki-no-ōkoku''): lit. the "''[[kingdom]] of the moon''" -- "''the Moon Kingdom''"
-* {{l|ja|月城}} ({{l|ja|つきしろ}}, ''tsuki-shiro''): lit. "''[[moon]] [[castle]]''"
-* {{l|ja|月宮殿}} ({{l|ja|つききゅうでん}}, ''tsuki-kyūden''): lit. "''[[moon]] [[palace]]''"
-* {{l|ja|月野宮廷}} ({{l|ja|つきのきゅうてい}}, ''tsuki-no-kyūtei''): lit. "''[[royal]] [[court]] of the moon''"
-* {{l|ja|月野兎}} ({{l|ja|つきのうさぎ}}, ''tsuki-no-usagi''): lit. the "''[[rabbit]] on the [[moon]]''"
-* {{l|ja|月見}} ({{l|ja|つきみ}}, ''[[tsukimi]]''): lit. the "''[[moon]] [[viewing]] [[festival]]''"
+* {{l|ja|月兎|tr=[[げっと]], ''[[getto]]''; [[つきのうさぎ}}, ''[[tsuki no usagi]]''}}: the [[moon rabbit]]
+* {{l|ja|月見|tr=[[つきみ]], ''[[tsukimi]]''}}: [[moon]] [[viewing]], an [[autumnal]] [[festival]] in Japan
 
 ===Noun===
 {{ja-noun|k|hira=つく|rom=tsuku}}
