--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -32,6 +32,15 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 
 ----
 
+==Lojban==
+
+===Rafsi===
+{{jbo-rafsi}}
+
+# {{rafsi of|dunda}}
+
+----
+
 ==Serbo-Croatian==
 
 ===Etymology===
