--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -41,7 +41,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 ----
 
 ==Japanese==
-{{rfc|Link overkill, "lit." everywhere.  Needs reorg to put "Kanji" at top, and to put each reading and related POS sections under separate "Etymology" headers.}}
+{{rfc|Needs reorg to put "Kanji" at top, and to put each reading and related POS sections under separate "Etymology" headers.}}
 
 ===Noun===
 {{ja-noun|k|hira=つき|rom=tsuki}}
@@ -116,38 +116,38 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日}} ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): "''[[Mondays]], [[Monday]]''"
 * {{l|ja|月例}} ({{l|ja|げつれい}}, [[getsurei]]): [[monthly]]
 {{mid3}}
-* {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]): lit. "''moon [[age]]'';" the [[phase]]s of the moon
+* {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]):  "''moon [[age]]'';" the [[phase]]s of the moon
 * {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]): [[lunar]] [[era]]
 * {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]): [[mediocrity]]
-* {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei): lit. a "''[[moon cake]]''"
+* {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei):  a "''[[moon cake]]''"
 * {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu): "''the end of the month''"
 * {{l|ja|月日}} ({{l|ja|つきひ}}, {{l|ja|がっぴ}}, tsukihi, gappi): "''of [[birth]]''"
-* {{l|ja|月旦}} ({{l|ja|げったん}}, gettan): lit. "''moon [[rise]]/[[dawn]]''" 
-* {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]): lit. "''[[month]]/[[moon]] of the [[new year]]''"
+* {{l|ja|月旦}} ({{l|ja|げったん}}, gettan):  "''moon [[rise]]/[[dawn]]''" 
+* {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]):  "''[[month]]/[[moon]] of the [[new year]]''"
 * {{l|ja|日進月歩}} ({{l|ja|にっしんげっぽ}}, [[nisshingeppo]]): [[rapid]] [[advance]]
 * {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu): "''[[life]] & [[livelihood]]''," "''[[sun]] & moon''"
 * {{l|ja|毎月}} ({{l|ja|まいつき}}, [[maitsuki]]): [[every]] [[month]]
-* {{l|ja|雨月}} (''[[ugetsu]]''): lit. "''[[rain]] [[moon]]''"
+* {{l|ja|雨月}} (''[[ugetsu]]''):  "''[[rain]] [[moon]]''"
 {{mid3}}
 * {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
 * {{l|ja|月形}} (''tsukigata''; (or {{l|ja|月型}} (''tsukigata'')): a/the [[crescent moon]]
 * {{l|ja|三日月}} (''mikazuki''): a/the [[crescent moon]]
-* {{l|ja|凹月}} ({{l|ja|おうげつ}}, ''ōgetsu''/''āogetsu''): lit. "''[[concave]] moon''" - a [[crescent]] moon
-* {{l|ja|四半月}} ({{l|ja|しはんつき}}, ''[[shihantsuki]]''; or {{l|ja|しはんげつ}}, ''[[shihangetsu]]''): lit. [[quarter moon]]
-* {{l|ja|半月}} ({{l|ja|はんつき}}, ''[[hantsuki]]''; or {{l|ja|はんげつ}}, ''[[hangetsu]]''): lit. [[half moon]]
-* {{l|ja|凸月}} ({{l|ja|とつげつ}}, ''[[totsugetsu]]''): lit. "''[[convex]] moon'';" the [[gibbous moon]]
-* {{l|ja|満月}} ({{l|ja|まんげつ}}, ''[[mangetsu]]''): lit. [[full moon]]
-* {{l|ja|盛月}} or {{l|ja|増月}}: lit. "''[[heightening]]/[[increasing]] moon'';" [[waxing moon]]
-* {{l|ja|衰月}} or {{l|ja|減月}}: lit. "''[[declining]]/[[reducing]] moon'';" [[waning moon]]
-* {{l|ja|無月}} (''[[mugetsu]]''): lit. "''[[no]] [[moon]]''"
+* {{l|ja|凹月}} ({{l|ja|おうげつ}}, ''ōgetsu''/''āogetsu''):  "''[[concave]] moon''" - a [[crescent]] moon
+* {{l|ja|四半月}} ({{l|ja|しはんつき}}, ''[[shihantsuki]]''; or {{l|ja|しはんげつ}}, ''[[shihangetsu]]''):  [[quarter moon]]
+* {{l|ja|半月}} ({{l|ja|はんつき}}, ''[[hantsuki]]''; or {{l|ja|はんげつ}}, ''[[hangetsu]]''):  [[half moon]]
+* {{l|ja|凸月}} ({{l|ja|とつげつ}}, ''[[totsugetsu]]''):  "''[[convex]] moon'';" the [[gibbous moon]]
+* {{l|ja|満月}} ({{l|ja|まんげつ}}, ''[[mangetsu]]''):  [[full moon]]
+* {{l|ja|盛月}} or {{l|ja|増月}}:  "''[[heightening]]/[[increasing]] moon'';" [[waxing moon]]
+* {{l|ja|衰月}} or {{l|ja|減月}}:  "''[[declining]]/[[reducing]] moon'';" [[waning moon]]
+* {{l|ja|無月}} (''[[mugetsu]]''):  "''[[no]] [[moon]]''"
 {{bottom}}
 
 ====Derived terms====
-* {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
+* {{l|ja|月の側暗い}}:  the "''[[dark]] [[side]] of the [[moon]]''"
 * {{l|ja|中秋の名月}}: the "''[[mid|Mid]]-[[Autumn]] [[harvest moon|Harvest Moon]] [[festival|Festival]]''"
-* {{l|ja|収穫月}} ({{l|ja|しゅうかくげつ}}, ''shūkaku-getsu''): lit. the "''[[harvest moon]]''"
-* {{l|ja|猟師月}} ({{l|ja|りょうしげつ}}, ''ryōshi-getsu''): lit. the "''[[hunter's moon]]''"
-* {{l|ja|青月}} ({{l|ja|あおいげつ}}, ''aoigetsu''): lit. a/the "''[[blue moon]]''"
+* {{l|ja|収穫月}} ({{l|ja|しゅうかくげつ}}, ''shūkaku-getsu''):  the "''[[harvest moon]]''"
+* {{l|ja|猟師月}} ({{l|ja|りょうしげつ}}, ''ryōshi-getsu''):  the "''[[hunter's moon]]''"
+* {{l|ja|青月}} ({{l|ja|あおいげつ}}, ''aoigetsu''):  a/the "''[[blue moon]]''"
 
 ====Synonyms====
 * (''the moon/[[lunar]]''): {{l|ja|太陰}}, {{l|ja|ムーン}}
