--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -47,7 +47,7 @@
 * Japanese: {{t-|ja|カリフラワー|tr=karifurawā}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu|sc=Hang}}
 * [[Macedonian]]: {{t-|mk|карфиол|m|tr=karfiól}}
-* Navajo: {{tø|nv|chʼil łigaii}}
+* Navajo: {{tø|nv|chʼil łigaii}}, {{tø|nv|sęęschʼil}}
 * Persian: {{t|fa|کلم گل|sc=fa-Arab}}
 * Polish: {{t+|pl|kalafior|m}}
 * Romanian: {{t|ro|conopidă|f}}
