--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -47,7 +47,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * German: {{t+|de|Iltis|m}}
 * Greek: {{t+|el|οζοϊκτίς}}, {{t+|el|βρωμοκούναβο}}
 * Hungarian: {{t+|hu|görény}}
-* Irish: [[firéad]]
+* Irish: [[firéad]], {{t|ga|cat coille|m}}, {{t|ga|toghán|m}}
 * Italian: {{t-|it|puzzola|f}}
 * [[Latgalian]]: {{tø|ltg|saskys|m}}
 * Latin: {{t+|la|mustella}}
