--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -4,8 +4,9 @@
 * {{IPA|/ˈpɔlkæt/}}
 
 ===Etymology===
-From {{etyl|frm}} {{term|pole||hen|lang=frm}}, because of its fondness for poultry {{compound||cat}}
+From {{etyl|frm}} {{term|pole||hen, because of its fondness for poultry|lang=frm}} {{compound||cat}}
 {{wikipedia}}
+
 ===Noun===
 {{en-noun}}
 
