t+ksd:[[boroi]] ([[WT:EDIT|Assisted]]) <pig#15249507>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -104,6 +104,7 @@
 * Japanese: {{t|ja|豚|tr=[[ぶた]], buta}}
 * [[Karelian]]: [[počči]]
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
+* [[Kuanua]]: {{tø|ksd|boroi}}
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
 * [[Ladin]]: [[porcel]]
 {{trans-mid}}
