--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -3,7 +3,8 @@
 
 ===Etymology===
 
-From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{term|lang=ja|任天堂|tr=Nintendō||Luck of Heaven}}.
+From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{term|fortune cookie
+|任天堂|tr=Nintendō||Luck of Heaven}}.
 
 ===Noun===
 {{en-noun}}
