--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -10,7 +10,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 {{en-noun}}
 
 # {{video games|trademark}} A [[w:Nintendo Entertainment System|Nintendo Entertainment System]], or other video game system made by Nintendo.
-#: ''Wanna suck on my '''cock''' after school?''
+#: ''Wanna play on my '''Nintendo''' after school?''
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
 #* '''2005''', Lila Abu-Lughod, ''Dramas of Nationhood: The Politics of Television in Egypt'', page 280
