--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -38,10 +38,12 @@ Partly imitative, also influenced by {{term|burble}}.
 * Armenian: {{t-|hy|պղպջակ|tr=pġpǰak}}
 * [[Azeri]]: {{t|az|köpük}}
 * Bulgarian: {{t|bg|мехурче|n}}
+* [[Catalan]]: {{t|ca|bombolla|f}}
 * Chinese:
 *: Mandarin: {{t-|cmn|泡|tr=pào|sc=Hani}}, {{t|cmn|氣泡|sc=Hani}}, {{t|cmn|气泡|tr=qìpào|sc=Hani}}, {{t|cmn|泡沫|tr=pàomò|sc=Hani}}
 * [[Crimean Tatar]]: {{tø|crh|köpük}}
 * Czech: {{t-|cs|bublina|f}}
+* Dutch: {{t|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
 * Georgian: {{t-|ka|ბუშტი|tr=bušti|sc=Geor|xs=Georgian}}
@@ -51,9 +53,9 @@ Partly imitative, also influenced by {{term|burble}}.
 * Hungarian: {{t+|hu|buborék}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{l|ja|泡}} ({{l|ja|あわ}}, ''awa''), {{l|ja|泡立つ}}, [[shabon]]
+{{trans-mid}}
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
-{{trans-mid}}
 * Latin: {{t-|la|bulla|f}}
 * Latvian: {{t-|lv|burbulis|m|xs=Latvian}}
 * [[Macedonian]]: {{t|mk|меур|m|tr=méur}}
@@ -75,11 +77,13 @@ Partly imitative, also influenced by {{term|burble}}.
 
 {{trans-top|small spherical cavity in a solid}}
 * Bulgarian: {{t|bg|мехурче|n}}
+* [[Catalan]]: {{t|ca|bombolla|f}}
+* Dutch: {{t|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|trou|m}}
 * German: {{t+|de|Blase|f}}
-* Greek: {{t+|el|φυσαλίδα|tr=fisalíδa}}
 {{trans-mid}}
+* Greek: {{t+|el|φυσαλίδα|tr=fisalíδa}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|меурче|n|tr=méurče}}
 * Portuguese: {{t+|pt|bolha|f}}
@@ -89,11 +93,13 @@ Partly imitative, also influenced by {{term|burble}}.
 
 {{trans-top|anything resembling a hollow sphere}}
 * Bulgarian: {{t+|bg|мехур|m}}
+* [[Catalan]]: {{t|ca|bombolla|f}}
+* Dutch: {{t|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
 * German: {{t+|de|Blase|f}}
 * Greek: {{t+|el|φυσαλίδα|f|tr=fisalíδa}},  {{t+|el|φούσκα|f|tr=fúska}}
-* Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 {{trans-mid}}
+* Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|меур|m|tr=méur}}
 * Portuguese: {{t+|pt|bolha|f}}
 * Russian: {{t|ru|пузырь|m|tr=puzýr'}}, {{t|ru|пузырёк|m|tr=puzyr'ók}}
@@ -101,11 +107,13 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-bottom}}
 
 {{trans-top|period of intense speculation in a market}}
+* [[Catalan]]: {{t|ca|bombolla|f}}
+* Dutch: {{t|nl|bel|f}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
 * German: {{t+|de|Blase|m}}
-* Greek: {{t+|el|φούσκα|f|tr=fúska}}
 {{trans-mid}}
+* Greek: {{t+|el|φούσκα|f|tr=fúska}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Italian: {{t+|it|bolla|f}}
 * Spanish: {{t+|es|burbuja|f}}
