t+uk:[[множення]] ([[WT:EDIT|Assisted]]) <multiplication#15268829>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -41,6 +41,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Spanish: {{t+|es|multiplicación|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
 * [[Telugu]]: [[గుణకారం]] (guNakaaram)
+* Ukrainian: {{t|uk|множення|n|tr=mnóžennja|sc=Cyrl}}
 * Urdu: {{t-|ur|ضرب|xs=Urdu}}
 * [[West Frisian]]: [[fermannichfâldiging]]
 {{trans-bottom}}
@@ -53,6 +54,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Hungarian: {{t|hu|szorzás}}
 * Romanian: {{t|ro|înmulțire|f}}, {{t|ro|multiplicare|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
+* Ukrainian: {{t|uk|множення|n|tr=mnóžennja|sc=Cyrl}}
 {{trans-bottom}}
 
 ====Derived terms====
