--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -25,12 +25,10 @@ Literally "beyond the river [[Dniester]]".
 * [[Asturian]]: {{t-|ast|Transnistria|f|xs=Asturian}}
 * [[Basque]]: {{t-|eu|Transnistria|xs=Basque}}
 * Belarusian: {{t|be|Прыднястроўе|n|tr=Prydnjastróŭje|xs=Belarusian}}
-* Bosnian: {{t|bs|Pridnjestrovska Moldavska Republika|f}}
 * Bulgarian: {{t|bg|Приднестровие|n|tr=Pridnestróvie}}
 * [[Catalan]]: {{t-|ca|Transnístria|f}}
 * Chinese:
 *: Mandarin: {{t|zh|涅斯特里亞|sc=Hani}}, {{t|zh|涅斯特里亚|tr=Nièsītèlǐyà|sc=Hani}}, {{tø|cmn|德涅斯特河沿岸|tr=Dénièsītèhéyán'àn|sc=Hans}}
-* Croatian: {{t|hr|Pridnjestrovska Moldavska Republika|f}}
 * Czech: {{t|cs|Podněstří}}
 * Dutch: {{t|nl|Trans-Nistrië}}
 * Esperanto: {{t|eo|Ĉednestrio|xs=Esperanto}}, {{t|eo|Transdnestrio|xs=Esperanto}}, {{t|eo|Transnistrio|xs=Esperanto}}
@@ -45,20 +43,22 @@ Literally "beyond the river [[Dniester]]".
 * Hungarian: {{t|hu|Dnyeszter-menti Moldáv Köztársaság}}
 * Indonesian: {{t-|id|Transnistria|xs=Indonesian}}
 * Italian: {{t-|it|Transnistria|f}}
-* Japanese: {{t|ja|沿ドニエストル共和国}} (えんドニエストルきょうわこく, en-Doniesutoru-kyōwakoku)
+* Japanese: {{t|ja|沿ドニエストル共和国|tr=えんドニエストルきょうわこく, en-Doniesutoru-kyōwakoku}}
 * Korean: {{t|ko|트란스니스트리아|tr=Teuranseuniseuteuria|sc=Hang}}
 * Latvian: {{t|lv|Piedņestras Moldāvu Republika|xs=Latvian}}
 * Lithuanian: {{t+|lt|Padniestrė|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|Придњестровие|n|tr=Pridnjestróvie}}
-* [[Moldavian]]: {{t|mo|Транснистриа|f|tr=Transnistria|sc=Cyrl|xs=Moldavian}}
 * Norwegian: {{t-|no|Transnistria|n}}
 * [[Occitan]]: {{t-|oc|Transnístria|f|xs=Occitan}}
 * [[Piedmontese]]: {{tø|pms|Transnistria|f|xs=Piemontese}}
 * Polish: {{t+|pl|Naddniestrze|n}}
 * Portuguese: {{t+|pt|Transnístria|f}}
-* Romanian: {{t-|ro|Transnistria|f}}
+* Romanian: {{t|ro|Transnistria|f}}
+*: Cyrillic: {{t|ro|Транснистриа|f|sc=Cyrl}}
 * Russian: {{t+|ru|Приднестровье|n|tr=Pridnestróvje}}
-* Serbian: {{t|sr|Придњестровље|sc=Cyrl}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Придњестровље|n|sc=Cyrl}}
+*: Roman: {{t|sh|Pridnjestrovlje|n}}
 * Slovak: {{t|sk|Podnestersko|n}}
 * Spanish: {{t-|es|Transnistria|f}}
 * Swedish: {{t|sv|Transnistrien}}
