t+hi:[[ट्रान्सनिस्ट्रिया]] t-balance t+sl:[[Transnistrija]] t+sl:[[Pridnjestrovje]] t+fa:[[ترنسنیستریا]] t+lv:[[Piedņestra]] ([[WT:EDIT|Assisted]]) <Transnistria#15290564>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -38,18 +38,20 @@ Literally "beyond the river [[Dniester]]".
 * Georgian: {{t|ka|დნესტრისპირეთი|tr=dnestrispiret'i|sc=Geor|xs=Georgian}}
 * German: {{t|de|Transnistrien|n}}
 * Greek: {{t|el|Υπερδνειστερία|f}}
-{{trans-mid}}
 * Hebrew: {{t|he|טרנסניסטריה|f}}
+* Hindi: {{t|hi|ट्रान्सनिस्ट्रिया|m|tr=ṭrānsnisṭriyā|sc=Deva}}
 * Hungarian: {{t|hu|Dnyeszter-menti Moldáv Köztársaság}}
 * Indonesian: {{t-|id|Transnistria|xs=Indonesian}}
 * Italian: {{t-|it|Transnistria|f}}
+{{trans-mid}}
 * Japanese: {{t|ja|沿ドニエストル共和国|tr=えんドニエストルきょうわこく, en-Doniesutoru-kyōwakoku}}
 * Korean: {{t|ko|트란스니스트리아|tr=Teuranseuniseuteuria|sc=Hang}}
-* Latvian: {{t|lv|Piedņestras Moldāvu Republika|xs=Latvian}}
+* Latvian: {{t|lv|Piedņestras Moldāvu Republika|xs=Latvian}}, {{t|lv|Piedņestra|f}}
 * Lithuanian: {{t+|lt|Padniestrė|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|Придњестровие|n|tr=Pridnjestróvie}}
 * Norwegian: {{t-|no|Transnistria|n}}
 * [[Occitan]]: {{t-|oc|Transnístria|f|xs=Occitan}}
+* Persian: {{t|fa|ترنسنیستریا|tr=Transnistriyâ|sc=fa-Arab}}
 * [[Piedmontese]]: {{tø|pms|Transnistria|f|xs=Piemontese}}
 * Polish: {{t+|pl|Naddniestrze|n}}
 * Portuguese: {{t+|pt|Transnístria|f}}
@@ -60,6 +62,7 @@ Literally "beyond the river [[Dniester]]".
 *: Cyrillic: {{t|sh|Придњестровље|n|sc=Cyrl}}
 *: Roman: {{t|sh|Pridnjestrovlje|n}}
 * Slovak: {{t|sk|Podnestersko|n}}
+* Slovene: {{t|sl|Transnistrija|f}}, {{t|sl|Pridnjestrovje|n}}
 * Spanish: {{t-|es|Transnistria|f}}
 * Swedish: {{t|sv|Transnistrien}}
 * Ukrainian: {{t|uk|Придністров'я|n|tr=Prydnistróv'ja|xs=Ukrainian}}
