--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -46,8 +46,8 @@ Literally "beyond the river [[Dniester]]".
 {{trans-mid}}
 * Japanese: {{t|ja|沿ドニエストル共和国|tr=えんドニエストルきょうわこく, en-Doniesutoru-kyōwakoku}}
 * Korean: {{t|ko|트란스니스트리아|tr=Teuranseuniseuteuria|sc=Hang}}
-* Latvian: {{t|lv|Piedņestras Moldāvu Republika|xs=Latvian}}, {{t|lv|Piedņestra|f}}
-* Lithuanian: {{t+|lt|Padniestrė|xs=Lithuanian}}
+* Latvian: {{t|lv|Piedņestra|f}}
+* Lithuanian: {{t+|lt|Padniestrė|f|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|Придњестровие|n|tr=Pridnjestróvie}}
 * Norwegian: {{t-|no|Transnistria|n}}
 * [[Occitan]]: {{t-|oc|Transnístria|f|xs=Occitan}}
