--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -44,7 +44,7 @@ Literally "beyond the river [[Dniester]]".
 * Indonesian: {{t-|id|Transnistria|xs=Indonesian}}
 * Italian: {{t-|it|Transnistria|f}}
 {{trans-mid}}
-* Japanese: {{t|ja|沿ドニエストル共和国|tr=えんドニエストルきょうわこく, en-Doniesutoru-kyōwakoku}}
+* Japanese: {{t|ja|沿ドニエストル共和国|tr=えんドニエストルきょうわこく, en-Doniesutoru-kyōwakoku}}, {{t|ja|沿ドニエストル|tr=En-Doniesutoru|sc=Jpan}}
 * Korean: {{t|ko|트란스니스트리아|tr=Teuranseuniseuteuria|sc=Hang}}
 * Latvian: {{t|lv|Piedņestra|f}}
 * Lithuanian: {{t+|lt|Padniestrė|f|xs=Lithuanian}}
