--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -17,7 +17,7 @@
 * Spanish: {{t-|es|aun así}}
 {{trans-bottom}}
 
-[[Category:English adverbs]big hairy asses]
+[[Category:English adverbs]]
 
 [[et:even so]]
 [[sv:even so]]
