--- a/en/b/barbera.745859.wikitext
+++ b/en/b/barbera.745859.wikitext
@@ -13,6 +13,8 @@ From {{etyl|it}} {{term|lang=it|barbera}}
 #* {{quote-news|year=2007|date=May 30|author=Florence Fabricant|title=An Earthy Mushroom Pasta Sauce With Piquant Cheese for an Earthy, Truffly Wine|work=New York Times|url=http://www.nytimes.com/2007/05/30/dining/30pair.html
 |passage=(Your '''barbera''' will do nicely.) }}
 
+[[Category:en:Wines]]
+
 ----
 
 ==French==
@@ -30,7 +32,7 @@ From {{etyl|it}} {{term|lang=it|barbera}}
 ==Italian==
 
 ===Noun===
-'''barbera''' {{m}} {{inv}}
+{{infl|it|noun|g=m}} {{inv}}
 
 # A [[grape]] variety from [[Piedmont]]
 # A dry [[red wine]] made from these grapes
@@ -38,7 +40,7 @@ From {{etyl|it}} {{term|lang=it|barbera}}
 ===Anagrams===
 * [[barbare#Italian|barbare]]
 
-[[Category:Italian nouns]]
+[[Category:it:Wines]]
 
 ----
 
