--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -22,6 +22,7 @@ From the ecclesiastical {{etyl|la}} ''[[pusillanimis]]'', from ''[[pusillus]]'' 
 {{trans-top}}
 *Italian: {{t-|it|pusillanimità|f}}, {{t-|it|viltà|f}}
 {{trans-mid}}
+* Spanish: {{t|es|pusilanimidad|f}}
 {{trans-bottom}}
 
 [[Category:English abstract nouns]]
