t+it:[[monsignore]] t-balance ([[WT:EDIT|Assisted]]) <Monsignor#15304858>

--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -13,6 +13,7 @@
 ====Translations====
 {{trans-top|ecclesiastic title bestowed on some Roman Catholic clerics by the Pope}}
 * Dutch: [[monseigneur]] {{m}}
+* Italian: {{t|it|monsignore|m}}
 {{trans-mid}}
 * Spanish: {{t|es|monseñor|m}}
 {{trans-bottom}}
