Reverted edits by [[Special:Contributions/184.183.155.150|184.183.155.150]] ([[User_talk:184.183.155.150|Talk]]); changed back to last version by [[User:KassadBot|KassadBot]] <bubble#15314444>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -1,5 +1,27 @@
 {{wikipedia}}
-Pop pop pop =) bubbles hahaha
+==English==
+[[File:Reflection_in_a_soap_bubble_edit.jpg|thumb|A soap bubble.]]
+
+===Etymology===
+Partly imitative, also influenced by {{term|burble}}.
+
+===Pronunciation===
+* {{IPA|/ˈbʌb.əl/}}
+* {{audio|en-us-bubble.ogg|Audio (US)}}
+* {{rhymes|ʌbəl}}
+
+===Noun===
+{{en-noun}}
+
+# A [[spherical]]ly [[contained]] [[volume]] of air, especially one made from [[soapy]] liquid.
+# A small spherical [[cavity]] in a solid material.
+# Anything resembling a [[hollow]] sphere.
+# A period of intense [[speculation]] in a market, causing prices to rise quickly to [[irrational]] levels as the [[metaphorical]] bubble expands, and then fall even more quickly as the bubble bursts.
+# {{obsolete}} Someone who has been ‘bubbled’ or [[fooled]]; a [[dupe]].
+#* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1979, p. 15:
+#*: For no woman, sure, will plead the passion of love for an excuse.  This would be to own herself the mere tool and '''bubble''' of the man.
+# {{figuratively}} a feverish upwelling
+#* {{quote-news
 |year=2011
 |date=January 23
 |author=Alistair Magowan
