--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -148,6 +148,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Ukrainian: {{t|uk|кріль|m|tr=kril’|xs=Ukrainian}}, {{t+|uk|кролик|m|tr=królyk|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[nukl]]
 * Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|سسا|m|tr=susā|sc=ur-Arab}}
+* [[Venetian]]: {{tø|vec|cunicio|m}}
 * [[Volapük]]: {{qualifier|male or female}} {{t|vo|krolig}}, {{qualifier|male}} {{t|vo|hikrolig}}, {{qualifier|female}} {{t|vo|jikrolig}}, {{qualifier|male or female offspring}} {{t|vo|kroligül}}, {{qualifier|male offspring, young}} {{t|vo|hikroligül}}, {{qualifier|female offspring, young}} {{t|vo|jikroligül}}
 * Welsh: [[cwningen]]
 * [[West Frisian]]: [[knyn]]
