--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -13,7 +13,7 @@
 {{trans-top|very close friend}}
 * Chinese:
 *: Mandarin: {{t|zh|知己|tr=zhījǐ|sc=Hani}}, {{t|zh|知音|tr=zhīyīn|sc=Hani}}
-* Dutch: {{t-|nl|getrouwe|m|f}}
+* Dutch: {{t-|nl|getrouwe|m|f}}, {{t|nl|boezem vriend}}
 * French: {{t|fr|ami(e) intime|m|f}}
 * German: {{t|de|Busenfreund|m}}
 * Hungarian: {{t+|hu|kebelbarát}}
