--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -14,7 +14,7 @@
 {{wikipedia|weight}}
 {{en-noun}}
 
-# The [[force]] on an object due to the gravitational attraction between it and the Earth (or whatever astronomical object it is influenced by).
+# The [[force]] on an object due to the gravitational attraction between it and the Earth (or whatever astronomical object it is primarily influenced by).
 # An object used to make something [[heavier]].
 # A [[standardized]] block of [[metal]] used in a [[balance]] to measure the [[mass]] of another object.
 # [[importance|Importance]] or [[influence]]
