t+es:[[omitir]] ([[WT:EDIT|Assisted]]) <leave out#15356683>

--- a/en/l/leave out.741825.wikitext
+++ b/en/l/leave out.741825.wikitext
@@ -27,6 +27,7 @@
 * Italian: {{t+|it|omettere}}
 * Polish: {{t+|pl|pomijać}}
 * Russian: гл. [[пропускать]], не [[включать]]
+* Spanish: {{t|es|omitir}}
 {{trans-bottom}}
 
 [[Category:English phrasal verbs]]
