t+hu:[[felemészt]] ([[WT:EDIT|Assisted]]) <consume#15370267>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -84,7 +84,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Finnish: {{t+|fi|tuhota}}, {{t-|fi|tuhoutua}}
 * French: {{t+|fr|consumer}}
 {{trans-mid}}
-* Hungarian: {{t+|hu|elpusztít}}
+* Hungarian: {{t+|hu|elpusztít}}, {{t|hu|felemészt}}
 * Italian: {{t|it|consumare}}
 * Persian: {{t|fa|نابود شدن|sc=fa-Arab}}
 * Vietnamese: {{t|vi|tàn phá}}
