Undo revision 15220925 by [[Special:Contributions/24.86.166.34|24.86.166.34]] ([[User talk:24.86.166.34|talk]]) <island#15372340>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -130,7 +130,7 @@
 * Kazakh: {{t-|kk|арал|tr=aral|sc=Cyrl|xs=Kazakh}}, {{t|kk|атау|tr=ataw|sc=Cyrl|xs=Kazakh}}
 * [[Khakas]]: {{tø|kjh|олтырых|tr=oltırıx|sc=Cyrl}}
 * [[Khmer]]: {{t-|km|កោះ|tr=goh|sc=Khmr|xs=Khmer}}
-* [[Komi]]: {{tø|kv|ди|tr=di|sc=Cyrl}}
+* [[Komi]]: {{tø|kv|ді|tr=di|sc=Cyrl}}
 {{trans-mid}}
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 * [[Kumyk]]: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
