--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -22,6 +22,8 @@ Derived from the stingingly painful sensation of table salt deliberately being r
 ====Translations====
 {{trans-top|to make an injury feel worse}}
 * Bengali: kata ghaye nuner chite
+* Chinese:
+*: {{trreq|Finnish}}
 * Finnish: {{t-|fi|vääntää veistä haavassa}}
 * Japanese: {{t|ja|傷口に塩を塗る|tr=kizuguchi-ni shio-o nuru|sc=Jpan}}
 {{trans-mid}}
