--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -46,11 +46,12 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 ===Noun===
 {{ja-noun|k|hira=つき|rom=tsuki}}
 
-# the [[moon]]
+# the [[moon]]; [[lunar]]
 #: {{usex|日本では'''月'''にうさぎが住んでいるというお話があります。|tr=にほんでは'''つき'''にうさぎがすんでいるというおはなしがあります。<br/>''Nihon de wa '''tsuki''' ni usagi ga sunde iru toiu ohanashi ga arimasu.''|t=In Japan, there is a fairy-tale that rabbits live on the '''moon'''.|lang=ja}}
 #: {{usex|'''月'''は地球の唯一の衛星です。|tr='''つき'''はちきゅうのゆいいつのえいせいです。<br/>'''''Tsuki''' wa chikyū no yui'itsu no eisei desu.''|t='''Moon''' is the only one [[satellite]] of the [[Earth]].|lang=ja}}
 # the [[lunar]] [[cycle]], a [[month]]
 #: {{usex|'''月'''に一度、旅行に出かけます。|tr='''つき'''にいちど、りょこうにでかけます。<br/>'''''Tsuki''' ni ichido, ryokō ni dekake masu.''|t=I go for a trip once a '''month'''.|lang=ja}}
+# {{tarot|lang=ja}}: the [[moon]]; the eighteenth [[trump]] or [[major arcana]] [[card]] in most traditional Tarot decks.  
 
 ====Compounds====
 * {{l|ja|月兎|tr=[[げっと]], ''[[getto]]''; [[つきのうさぎ]], ''[[tsuki no usagi]]''}}: the moon rabbit
