t+uk:[[металург]] ([[WT:EDIT|Assisted]]) <metallurgist#15429064>

--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -17,6 +17,7 @@
 * German: {{t|de|Metallurg|m}}, {{t|de|Metallurge|m}}, {{t|de|Metallurgin|f}}
 * Russian: {{t+|ru|металлург|m|tr=metallúrg}}
 * Spanish: {{t-|es|metalúrgico|m|f}}, {{t-|es|metalurgista|m}}
+* Ukrainian: {{t|uk|металург|m|tr=metallúrh|sc=Cyrl}}
 * [[Volapük]]: {{qualifier|epicene}} {{t|vo|metalavan}}, {{qualifier|male}} {{t|vo|himetalavan}}, {{qualifier|female}} {{t|vo|jimetalavan}}, {{qualifier|collective, epicene}} {{t|vo|metalavanef}}
 {{trans-bottom}}
 
