--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -20,13 +20,14 @@
 * Finnish: {{t-|fi|sapelihammastiikeri}}
 * French: {{t|fr|chat à dents de sabre|m}}
 * German: {{t+|de|Säbelzahntiger|m}}
-{{trans-mid}}
 * Japanese: {{t|ja|剣歯虎|tr=けんしこ, kenshiko}}
+{{trans-mid}}
 * Korean: {{t|ko|검치호|tr=geomchiho}} ({{t-|ko|劍齒虎}})
 * Norwegian: {{t-|no|sabeltanntiger|m}}, {{t|no|sabeltannkatt|m}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
 * Russian: {{t|ru|саблезубая кошка|f|tr=sablezúbaja kóška}} {{qualifier|lit.: sabre-toothed cat}}
 * Spanish: {{t|es|diente de sable|m}}
+* Swedish: {{t|sv|sabeltandad tiger|c}}
 {{trans-bottom}}
 
 ===Anagrams===
