t+km:[[ហួច]] ([[WT:EDIT|Assisted]]) <whistle#15460576>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -175,6 +175,7 @@
 {{trans-mid}}
 * Irish: [[lig fead]]
 * Japanese: {{t|ja|口笛を吹く|tr=くちぶえをふく, kuchibue-o fuku}}
+* [[Khmer]]: {{t|km|ហួច|tr=houch|sc=Khmr}}
 * Latvian: {{t|lv|svilpt}}
 * Polish: [[gwizdać]], [[świstać]]
 * Portuguese: {{t|pt|assobiar}}
