--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -47,6 +47,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 
 =====Translations=====
 {{trans-top|mammal}}
+* [[Aguaruna]]: {{tø|agr|wapuhuš}}
 * [[Alabama]]: [[chokfi]]
 * Albanian: {{t-|sq|lepur i gropave|xs=Albanian}}
 * Arabic: {{t-|ar|ارنب|m|alt=أرْنَب|tr=’árnab}}
