--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -212,7 +212,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 
 ====Translations====
 {{trans-top|being so at that time}}
-* Dutch: {{t-|nl|toenmalig}}, {{t-|nl|toenmalige}}
+* Dutch: {{t-|nl|toenmalig}}
 * Esperanto: {{t|eo|tiama|xs=Esperanto}}
 * Finnish: {{t-|fi|silloinen}}
 * German: {{t|de|damalig}}
