--- a/en/e/engraft.773715.wikitext
+++ b/en/e/engraft.773715.wikitext
@@ -13,6 +13,13 @@ From earlier {{term|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft}}.
 # To insert, as a [[scion]] of one tree or plant into another, for the purpose of [[propagation]]; [[graft]] onto a plant
 # To [[fix]] firmly into place
 
+====Translations====
+{{trans-top|To insert, as a [[scion]]}}
+* Bulgarian: {{t|bg|присаждам}}, {{t|bg|ашладисвам}}
+{{trans-mid}}
+
+{{trans-bottom}}
+
 ===Adjective===
 {{en-adj}}
 
