/* Proper noun */ <Ισραήλ#15499271>

--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -6,9 +6,9 @@
 ===Proper noun===
 {{el-noun-proper|n|Israíl|inv|sort=ισραηλ}}
 
-# The [[patriarch]] [[Israel]].
+# [[Israel]] {{qualifier|state ancient and modern}}
+# [[Israel]] {{qualifier|Biblical character}}
 # The [[Hebrew]] [[people]], the [[child|children]] of [[Israel]].
-# The [[state]] of [[Israel]], both [[ancient]] and [[modern]].
 
 ====Related terms====
 * {{el-l|Ισραηλινή|tr=Israiliní|gloss=Israeli|g=f}}
