--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -90,17 +90,15 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 ==Dutch==
 
 ===Suffix===
-'''-um''' (''plural'' '''[[-a#Dutch|-a]]''' ''or'' '''[[-ums#Dutch|-ums]]''')
+{{infl|nl|suffix|cat2=inflectional suffixes|sort=um|plural|a|or|ums}}
 
 # Denotes [[singular]] [[grammatical]] [[number]] of words of Latin origins.
 
 ====Usage notes====
-* Both the plural forms of ''-a'' and ''-ums'' are correct and used in everyday language.
+* Both the plural forms of ''-a'' and ''-ums'' are used in everyday language.
 
 ===See also===
 * [[-s#Dutch|-s]]
-
-[[Category:Dutch suffixes|um]]
 
 ----
 
