--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -26,12 +26,12 @@
 ==Mandarin==
 
 ===Etymology===
-From {{etyl|en|cmn}} {{term|WTO|lang=en}}, {{initialism of|World Trade Organization|cap=i|nocat=1}}.
+From {{etyl|en|cmn}} {{term|WTO|lang=en}}, {{initialism of|World Trade Organization|cap=i|nocat=1}}
 
 ===Proper noun===
 {{head|cmn|proper noun|sc=Latn}}
 
-# [[WTC]]
+# [[#English|WTO]]
 
 [[zh-min-nan:WTO]]
 [[cs:WTO]]
