--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -12,10 +12,11 @@ From {{etyl|frm|en}} {{term|enumeration|lang=frm}} < {{etyl|la}} {{term|enumerat
 ====Translations====
 {{trans-top|To specify each member of a sequence individually in incrementing order}}
 * Bosnian: {{t|bs|nabrojati}}
+* Bulgarian: {{t|bg|изброявам|sc=Cyrl}}
 * Dutch: {{t|nl|uittellen}}
 * Finnish: {{t-|fi|luetella}}
-* French: {{t-|fr|énoncer}}
 {{trans-mid}}
+* French: {{t-|fr|énoncer}}
 * Hungarian: {{t|hu|felsorol}}
 * Russian: {{qualifier|past tense}} {{t|ru|перечисленным|tr=perecheesleneyem}}
 {{trans-bottom}}
