--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -107,6 +107,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * French: {{t+|fr|théorie|f}}
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
+* [[Haitian Creole]]: {{tø|ht|teori}}
 * Japanese: {{t+|ja|理論|tr=riron}}, {{t|ja|学説|tr=gakusetsu}}
 * [[Macedonian]]: {{t-|mk|теорија|f|tr=teórija}}
 {{trans-mid}}
