t+agd:[[pon]] ([[WT:EDIT|Assisted]]) <pig#15635453>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -42,6 +42,7 @@
 {{trans-top|mammal of genus ''Sus''}}
 * [[Abau]]: {{tø|aau|huok}}
 * [[Afrikaans]]: [[vark]]
+* [[Agarabi]]: {{tø|agd|pon}}
 * Albanian: {{t-|sq|derr|m|xs=Albanian}}, {{t-|sq|thi|m|xs=Albanian}}
 * [[Ama]]: {{tø|amm|fu}}
 * [[Amanab]]: {{tø|amn|tata}}
