t+nv:[[dlǫ́ʼiiłgaii]] t-balance ([[WT:EDIT|Assisted]]) <stoat#15673318>

--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -13,8 +13,9 @@
 {{trans-top|an ermine}}
 * German: {{t|de|Hermelin|n}}
 * Hungarian: {{t|hu|hermelin}}
-* Polish: {{t|pl|gronostaj}}
+* Navajo: {{tø|nv|dlǫ́ʼiiłgaii}}
 {{trans-mid}}
+* Polish: {{t|pl|gronostaj}}
 * [[Volapük]]: {{qualifier|male or female}} {{t|vo|härmin}}
 {{trans-bottom}}
 
