t+nv:[[dlǫ́ʼiiłgaii]] t-balance ([[WT:EDIT|Assisted]]) <ermine#15673322>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -55,11 +55,12 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * [[Ladin]]: [[armelin]]
 * Latin: [[Mustela erminea]] '' ''
 * Latvian: [[sermulis]]
-{{trans-mid}}
 * Lithuanian: {{t-|lt|šermuonėlis|xs=Lithuanian}}
+{{trans-mid}}
 * [[Lower Sorbian]]: [[hermelin]]
 * [[Macedonian]]: {{t|mk|хермелин|m|tr=hermelín}}, {{t|mk|ермелин|m|tr=ermelín}}
 * Maltese: [[ermellin]]
+* Navajo: {{tø|nv|dlǫ́ʼiiłgaii}}
 * Norwegian: {{t+|no|røyskatt}}
 * [[Occitan]]: [[ermina]]
 * Polish: [[gronostaj]] '' ''
