--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -33,11 +33,11 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Belarusian: [[гарнастай]]
 * Bosnian: {{t|bs|hermelin|m}}
 * [[Breton]]: [[erminig]]
-* Bulgarian: [[хермелин]] ([[hermelin]])
+* Bulgarian: {{t|bg|хермелин|tr=hermelin|m}}
 * [[Catalan]]: [[ermini]]
 * Croatian: [[zerdav]]
 * Czech: {{t-|cs|hranostaj|m}}
-* Danish: {{t|da|hermelin/lækat}}
+* Danish: {{t|da|hermelin|c}}, {{t|da|lækat|c}}
 * Dutch: {{t+|nl|hermelijn|m}}
 * Esperanto: [[ermeno]]
 * Estonian: [[kärp]], [[lahits]], [[hermeliin]]
@@ -53,7 +53,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Irish: [[easóg]]
 * Italian: {{t-|it|ermellino|m}}
 * [[Ladin]]: [[armelin]]
-* Latin: [[Mustela erminea]] '' ''
+* Latin: [[Mustela erminea]] {{f}}
 * Latvian: [[sermulis]]
 * Lithuanian: {{t-|lt|šermuonėlis|xs=Lithuanian}}
 {{trans-mid}}
@@ -62,13 +62,13 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Maltese: [[ermellin]]
 * Navajo: {{tø|nv|dlǫ́ʼiiłgaii}}
 * Norwegian: {{t+|no|røyskatt}}
-* [[Occitan]]: [[ermina]]
-* Polish: [[gronostaj]] '' ''
+* [[Occitan]]: {{t|oc|ermina|f}}
+* Polish: {{t|pl|gronostaj|m}}
 * Portuguese: {{t-|pt|arminho|m}}
 * [[Romani]]: [[ermina]] {{f}}
 * Romanian: [[hermelina]]
 * [[Romansch]]: [[ermelin]]
-* Russian: [[горностай]] ([[gornostaj]]) '' ''
+* Russian: {{t|ru|горностай|tr=gornostáj|m}}
 * [[Sami]]: [[buoidda]]
 * [[Sardinian]]: [[ermellinu]]
 * [[Scottish Gaelic]]: {{t-|gd|neas|f|xs=Scottish Gaelic}}, {{t-|gd|neas mhòr|f|xs=Scottish Gaelic}}
@@ -76,10 +76,10 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Slovak: [[lasica hranostaj]]
 * Slovene: {{t+|sl|hermelin}}
 * Spanish: {{t+|es|armiño|m}}
-* Swedish: {{t-|sv|hermelin}}
+* Swedish: {{t-|sv|hermelin|c}}
 * Turkish: {{t+|tr|as}}, {{t+|tr|kakım}}, {{t+|tr|ermin}}
-* Ukrainian: [[горностай]] ([[gornostaj]])
-* [[Upper Sorbian]]: [[hermelin]], [[(hronostaj)]]
+* Ukrainian: {{t|uk|горностай|tr=gornostaj|m}}
+* [[Upper Sorbian]]: [[hermelin]], [[hronostaj]]
 * [[Volapük]]: {{qualifier|male or female}} {{t|vo|härmin}}, {{qualifier|male}} {{t|vo|hihärmin}}, {{qualifier|female}} {{t|vo|jihärmin}}, {{qualifier|male or female offspring, young}} {{t|vo|härminül}}, {{qualifier|male offspring, young}} {{t|vo|hihärminül}}, {{qualifier|female offspring, young}} {{t|vo|jihärminül}}
 * Welsh: [[carlwm]]
 * [[West Frisian]]: [[harmeling]]
