t+ryu:[[しま]] ([[WT:EDIT|Assisted]]) <island#15693044>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -159,6 +159,7 @@
 * Norwegian: {{t+|no|øy|m|f}}
 * [[Nottoway-Meherrin]]: {{tø|nwy|eohtessieh}}
 * [[Occitan]]: {{t+|oc|illa|f|xs=Occitan}}
+* [[Okinawan]]: {{tø|ryu|しま|tr=sima}}
 * [[Old English]]: {{t-|ang|ieg|f|alt=īeġ|xs=Old English}}
 * {{trreq|or}}
 * [[Ossetian]]: [[сакъадах]] (saqadax)
