--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -221,6 +221,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 * Dutch: [[bestemd]] (voor)
 {{trans-mid}}
 * Italian: {{t-|it|diretto}}, {{t-|it|incamminato}}
+* Japanese: {{t|ja|行き|tr=... yuki no|alt=…行きの|sc=Jpan}}, {{t|ja|向かう|tr=... ni mukatte|alt=…に向かって|sc=Jpan}}
 {{trans-bottom}}
 
 {{trans-top|constrained by something, or constrained to something}}
