--- a/en/m/Maneblusser.4388.wikitext
+++ b/en/m/Maneblusser.4388.wikitext
@@ -1,10 +1,10 @@
 ==Dutch==
 
 ===Etymology===
-From ''[[maan]]'' (''[[moon]]'') + ''[[blusser]]'' (''[[extinguisher]]''), after an incident where the moon shining through fog was mistaken for a tower on fire. [http://www.trabel.com/mechelen-intro.htm]
+From {{compound|maan|t1=moon|blusser|t2=extinguisher|lang=nl}}, after an incident where the moon shining through fog was mistaken for a tower on fire. [http://www.trabel.com/mechelen-intro.htm]
 
 ===Noun===
-{{nl-noun|g=m|pl=Maneblussers}}
+{{nl-noun|g=m|Maneblussers}}
 
 # {{context|humorous|Flemish|lang=nl}} An inhabitant of the city of [[Mechelen]], [[Belgium]].
 {{attention|nl|check caps, gender, inflection}}
