--- a/en/m/macrocephalus.801848.wikitext
+++ b/en/m/macrocephalus.801848.wikitext
@@ -1,11 +1,27 @@
 {{also|Macrocephalus}}
-==Translingual==
+==English==
 
-===Noun===
-'''macrocephalus'''
+===Adjective===
+{{en-adj|-}}
 
-# {{taxonomy}} The [[specific name]] of certain species.
-# {{taxonomy}} The [[subspecific name]] of certain subspecies.
+# {{alternative spelling of|macrocephalous}}
+
+----
+==Latin==
+
+===Etymology===
+New Latin; from {{etyl|grc|la}}.
+
+===Adjective===
+{{la-adj-1&2|macrocephalus|macrocephala|macrocephala|macrocephalum|macrocephalum}}
+
+# having a [[large]] [[head]]; [[macrocephalous]]
+
+====Inflection====
+{{la-decl-1&2|macrocephal}}
+
+===Usage notes===
+* Used almost exclusively as a taxonomic epithet.
 
 ====Derived terms====
 {{top3}}
@@ -42,18 +58,5 @@
 * ''[[Tachyoryctes macrocephalus]]''
 * ''[[Uropterygius macrocephalus]]''
 {{bottom}}
-
-===See also===
-* [[macrocephala]]
-* [[macrocephalum]]
-
-----
-
-==English==
-
-===Adjective===
-{{en-adj|-}}
-
-# {{alternative spelling of|macrocephalous}}
 
 [[ta:macrocephalus]]
