t+yi:[[רעקלאַמע]] ([[WT:EDIT|Assisted]]) <advertisement#15768290>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -93,6 +93,7 @@
 * Vietnamese: {{t+|vi|quảng cáo|xs=Vietnamese}} ({{t-|vi|廣告|sc=Hani|xs=Vietnamese}}), {{t+|vi|giới thiệu|xs=Vietnamese}}
 * [[Volapük]]: [[noted]], [[reklam]], [[nunam]]
 * [[West Frisian]]: [[advertinsje]], [[oankundiging]]
+* Yiddish: {{t|yi|רעקלאַמע|f|tr=reklame|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|public notice}}
