--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -19,7 +19,7 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 * Finnish: {{t+|fi|susi}}, {{t+|fi|suutari}}
 * French: {{t|fr|fausse alerte}}
 {{trans-mid}}
-* German: [[Blindgänger]] {{m}}
+* German: {{t+|de|Blindgänger}} {{m}}
 * Russian: {{t-|ru|невзрывающийся|tr=nevzryvájuščijsja}}, {{t+|ru|неисправный|tr=neisprávnyj}}
 {{trans-bottom}}
 
