--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -150,7 +150,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Upper Sorbian]]: [[nukl]]
 * Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|سسا|m|tr=susā|sc=ur-Arab}}
 * [[Venetian]]: {{tø|vec|cunicio|m}}
-* [[Volapük]]: {{qualifier|male or female}} {{t|vo|krolig}}, {{qualifier|male}} {{t|vo|hikrolig}}, {{qualifier|female}} {{t|vo|jikrolig}}, {{qualifier|male or female offspring}} {{t|vo|kroligül}}, {{qualifier|male offspring, young}} {{t|vo|hikroligül}}, {{qualifier|female offspring, young}} {{t|vo|jikroligül}}
+* [[Volapük]]: {{qualifier|♂♀}} {{t|vo|krolig}}, {{qualifier|♂}} {{t|vo|hikrolig}}, {{qualifier|♀}} {{t|vo|jikrolig}}, {{qualifier|♂♀ offspring}} {{t|vo|kroligül}}, {{qualifier|♂ offspring, young}} {{t|vo|hikroligül}}, {{qualifier|♀ offspring, young}} {{t|vo|jikroligül}}
 * Welsh: [[cwningen]]
 * [[West Frisian]]: [[knyn]]
 * [[Wolof]]: {{t|wo|njomboor|alt=njomboor ji}}
