--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/kənˈsʌmp.ʃən/}}
+* {{IPA|/kənˈsʌmp.ʃən/}}, {{SAMPA|/k@n"sVmp.S@n/}}
 * {{audio|en-us-consumption.ogg|Audio (US)}}
 
 ===Noun===
@@ -24,41 +24,41 @@
 {{trans-top|the act of consuming something}}
 * Arabic: {{t|ar|استهلاك|tr=eestihlek|sc=Arab}}
 * Bulgarian: {{t+|bg|консумиране|f}}, {{t+|bg|изразходване|n}}
-* [[Catalan]]: [[consum]] {{m}}
+* [[Catalan]]: {{t|ca|consum|m}}
 * Czech: {{t-|cs|spotřeba|f}}, {{t-|cs|zničení|n}}
 * Dutch: {{t+|nl|consumptie|f}}, {{t+|nl|verbruik|n}}
-* Finnish: [[kuluttaminen]], [[kulutus]]
+* Finnish: {{t|fi|kuluttaminen}}, {{t|fi|kulutus}}
 * French: {{t+|fr|consommation}}, {{t+|fr|consommer|m}}, {{t+|fr|consumer|m}}
 * German: {{t+|de|Konsum|m}}, {{t-|de|Verzehr|m}}
-* Hebrew: [[צריכה]] (tzrikha) {{f}} (''act of consuming goods'')
+* Hebrew: {{t|he|צריכה|tr=tzrikha|f}} {{qualifier|act of consuming goods}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|fogyasztás}}
 * [[Interlingua]]: {{t|ia|consumo}}
-* Japanese: [[消費]] (しょうひ, shōhi)
+* Japanese: {{t|ja|消費|tr=しょうひ, shōhi}}
 * Portuguese: {{t+|pt|consumo|m}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}
 * [[Scottish Gaelic]]: {{t-|gd|caitheamh|f|xs=Scottish Gaelic}}
-* Spanish: {{t-|es|consumir}}
+* Spanish: {{t-|es|consumo|m}}
 * Swedish: {{t|sv|konsumtion|c}}
 {{trans-bottom}}
 
 {{trans-top|the amount consumed}}
 * Bulgarian: {{t+|bg|консумация|f}}
-* [[Catalan]]: [[consum]] {{m}}
+* [[Catalan]]: {{t|ca|consum|m}}
 * Czech: {{t-|cs|spotřeba|f}}
-* Dutch: [[consumptie]] {{f}}, [[verbruik]] {{n}}
+* Dutch: {{t|nl|consumptie|f}}, {{t|nl|verbruik|n}}
 * Finnish: {{t-|fi|kulutus}}
 * French: {{t+|fr|consommation|f}}
 {{trans-mid}}
-* German: [[Verbrauch]] {{m}}, [[Verbrauchswert]] {{m}}, [[Verzehr]] {{m}}
+* German: {{t|de|Verbrauch|m}}, {{t|de|Verbrauchswert|m}}, {{t|de|Verzehr|m}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}, {{t+|ru|расход|m|tr=rasxód}}
 * [[Scottish Gaelic]]: {{t-|gd|caitheamh|f|xs=Scottish Gaelic}}
-* Spanish: {{t+|es|consumo}}
+* Spanish: {{t+|es|consumo|m}}
 * Swedish: {{t|sv|konsumtion|c}}
 {{trans-bottom}}
 
 {{trans-top|wasting-away of the human body through disease}}
-* Dutch: [[wegteren]] {{n}}
+* Dutch: {{t|nl|wegteren|n}}
 * Finnish: {{t|fi|riutuminen}}
 {{trans-mid}}
 * Russian: {{t|ru|истощение|n|tr=istoščénije}}
