--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -17,9 +17,10 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 
 =====Translations=====
 {{trans-top|mammal of the genus ''Genetta''}}
+* [[Catalan]]: {{t|ca|geneta|f}}
 * Chinese: {{t|cmn|獛|tr=[[pú]]|sc=Hani}}
-* Finnish: {{t|fi|genetti}}
 {{trans-mid}}
+* Finnish: {{t|fi|genetti}}
 * French: {{t|fr|genette|f}}
 {{trans-bottom}}
 
