--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -1,6 +1,5 @@
 {{also|genêt}}
 ==English==
-{{wikipedia|dab=genet}}
 [[File:Genetta genetta felina (Wroclaw zoo).JPG|thumb|right|Common genet, ''Genetta genetta'']]
 
 ===Pronunciation===
@@ -9,7 +8,7 @@
 
 ===Etymology 1===
 From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenette}} et al., of uncertain origin.
-
+{{wikipedia|genet (mammal)}}
 ====Noun====
 {{en-noun}}
 
@@ -26,7 +25,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 
 ===Etymology 2===
 Coined in the 20th century from {{term|gene}}.
-
+{{wikipedia|genet (biology)}}
 ====Noun====
 {{en-noun}}
 
