--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -8,7 +8,7 @@
 
 ===Etymology 1===
 From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenette}} et al., of uncertain origin.
-{{wikipedia|genet (mammal)}}
+{{wikipedia|genet (animal)}}
 ====Noun====
 {{en-noun}}
 
