moving the templates does not position them correctly <genet#15832058>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -1,5 +1,6 @@
 {{also|genêt}}
 ==English==
+{{wikipedia|dab=genet}}
 [[File:Genetta genetta felina (Wroclaw zoo).JPG|thumb|right|Common genet, ''Genetta genetta'']]
 
 ===Pronunciation===
@@ -8,7 +9,7 @@
 
 ===Etymology 1===
 From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenette}} et al., of uncertain origin.
-{{wikipedia|genet (animal)}}
+
 ====Noun====
 {{en-noun}}
 
@@ -25,7 +26,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 
 ===Etymology 2===
 Coined in the 20th century from {{term|gene}}.
-{{wikipedia|genet (biology)}}
+
 ====Noun====
 {{en-noun}}
 
