--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -11,6 +11,9 @@ From Latin.  Coined by [[w:Edward Gibbon|Edward Gibbon]].
 ====Synonyms====
 *[[Pax Augusta]]
 
+==Classical Chinese==
+羅馬治世
+
 [[et:Pax Romana]]
 [[it:Pax Romana]]
 [[pt:Pax Romana]]
