--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -22,6 +22,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 {{trans-mid}}
 * Finnish: {{t|fi|genetti}}
 * French: {{t|fr|genette|f}}
+* German: {{t|de|Genette|n}}
 {{trans-bottom}}
 
 ===Etymology 2===
