t+de:[[Ginsterkatze]] ([[WT:EDIT|Assisted]]) <genet#15844481>

--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -22,7 +22,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 {{trans-mid}}
 * Finnish: {{t|fi|genetti}}
 * French: {{t|fr|genette|f}}
-* German: {{t|de|Genette|n}}
+* German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
 {{trans-bottom}}
 
 ===Etymology 2===
