--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -23,6 +23,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 * Finnish: {{t|fi|genetti}}
 * French: {{t|fr|genette|f}}
 * German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
+* Spanish: {{t|es|jineta}}
 {{trans-bottom}}
 
 ===Etymology 2===
