--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -7,7 +7,7 @@
 # {{slang|euphemistic}} A [[body louse]].
 
 ====Synonyms====
-* {{sense|very close friend}} [[bosom buddy]]
+* {{sense|very close friend}} [[bosom buddy]], [[cater-cousin]]
 
 ====Translations====
 {{trans-top|very close friend}}
