--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -79,7 +79,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * [[Filipino]]: {{tø|fil|muli|xs=Filipino}}, {{tø|fil|nanaman|xs=Filipino}}, {{tø|fil|ulit|xs=Filipino}}
 * Finnish: {{t+|fi|taas}}, {{t+|fi|uudelleen}}, {{t+|fi|jälleen}}, {{t-|fi|toistamiseen}}, {{t-|fi|vielä kerran}}
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
-* Georgian: [[ხელახლა]] (xelaxla), [[კვლავ]] (kvlav), [[ისევ]] (isev), {{t|ka|ხელახლა|tr=xelaxla|sc=Geor}}, {{t|ka|კვლავ|tr=kvlav|sc=Geor}}, {{t|ka|ისევ|tr=isev|sc=Geor}}
+* Georgian: {{t|ka|ხელახლა|tr=xelaxla|sc=Geor}}, {{t|ka|კვლავ|tr=kvlav|sc=Geor}}, {{t|ka|ისევ|tr=isev|sc=Geor}}
 * German: {{t+|de|erneut}}, {{t-|de|noch einmal}}, {{t+|de|nochmal}}, {{t+|de|wieder}}, {{t|de|schon wieder}}
 * Greek: {{t+|el|ξανά|tr=xaná}}, {{t+|el|πάλι|tr=páli}}
 * Hawaiian: [[hou]]
