converting Filipino to Tagalog using [[Project:AWB|AWB]] <again#15940365>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{rfc-auto}}
 {{wikipedia}}
 
 ===Alternative forms===
@@ -76,7 +77,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Dutch: {{t+|nl|opnieuw}}, {{t+|nl|nogmaals}}, {{t+|nl|weer}}, {{t+|nl|alweer}}, {{t-|nl|wederom}}
 * Esperanto: {{t-|eo|denove|xs=Esperanto}}, {{t-|eo|ree|xs=Esperanto}}
 * Estonian: [[jälle]]
-* [[Filipino]]: {{tø|fil|muli|xs=Filipino}}, {{tø|fil|nanaman|xs=Filipino}}, {{tø|fil|ulit|xs=Filipino}}
+* [[Tagalog]]: {{t|tl|muli|xs=Tagalog}}, {{t|tl|nanaman|xs=Tagalog}}, {{t|tl|ulit|xs=Tagalog}}
 * Finnish: {{t+|fi|taas}}, {{t+|fi|uudelleen}}, {{t+|fi|jälleen}}, {{t-|fi|toistamiseen}}, {{t-|fi|vielä kerran}}
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Georgian: {{t|ka|ხელახლა|tr=xelaxla|sc=Geor}}, {{t|ka|კვლავ|tr=kvlav|sc=Geor}}, {{t|ka|ისევ|tr=isev|sc=Geor}}
@@ -142,7 +143,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * Chinese:
 ** Mandarin: {{t-|cmn|來著|sc=Hani}}, {{t-|cmn|来着|tr=láizhe|sc=Hani}}
 * Dutch: {{t|nl|ook al weer}}
-* [[Filipino]]: {{tø|fil|ano|xs=Filipino}}?, ano {{tø|fil|ulit|xs=Filipino}}? ano {{tø|fil|po|xs=Filipino}}? (formal)
+* [[Tagalog]]: {{t|tl|ano|xs=Tagalog}}?, ano {{t|tl|ulit|xs=Tagalog}}? ano {{t|tl|po|xs=Tagalog}}? (formal)
 * Finnish: {{t+|fi|taas}}
 * French: {{t+|fr|déjà}}
 * German: {{t+|de|nochmal}}
