--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -52,7 +52,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Hungarian: {{t+|hu|buborék}}
 * Italian: {{t+|it|bolla|f}}
-* Japanese: {{l|ja|泡}} ({{l|ja|あわ}}, ''awa''), {{l|ja|泡立つ}}, [[shabon]]
+* Japanese: {{l|ja|泡}} ({{l|ja|あわ}}, ''awa''), {{l|ja|泡立つ}}, [[shabon]], {{l|ja|シャボン}} (''[[shabon]]'')
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 {{trans-mid}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
