--- a/en/1/1 Kings.801703.wikitext
+++ b/en/1/1 Kings.801703.wikitext
@@ -3,7 +3,7 @@
 
 ===Proper noun===
 {{en-proper noun}}
-# {{biblical}}  A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[1 Samuel]] or [[3 Kings]].
+# {{biblical}}  The eleventh book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[1 Samuel]] or [[3 Kings]].
 
 ====Related terms====
 *[[Kgs]]
