t+tr:[[yine]] t+tr:[[bir daha]] ([[WT:EDIT|Assisted]]) <again#16003026>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -129,7 +129,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 * [[Tagalog]]: {{t-|tl|muli|xs=Tagalog}}, {{t|tl|nanaman|xs=Tagalog}}, {{t|tl|ulit|xs=Tagalog}}
 * [[Telugu]]: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
 * Thai: {{t+|th|อีก|tr=èek}},  {{t-|th|ใหม่|tr=mài}}
-* Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}
+* Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t|tr|yine}}, {{t|tr|bir daha}}
 * Ukrainian: {{t|uk|знову|tr=znóvu|sc=Cyrl}}, {{t|uk|знов|tr=znov|sc=Cyrl}}, {{t|uk|ще раз|tr=šče raz|sc=Cyrl}}
 * Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}, {{t|ur|پھر سے|tr=phir se|sc=ur-Arab}}, {{t|ur|دوبارہ|tr=dubārā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|lại|xs=Vietnamese}}
