t+fr:[[nom de Dieu]] ([[WT:EDIT|Assisted]]) <good Lord#16003867>

--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -11,7 +11,7 @@
 *: Mandarin: {{t-|cmn|天哪|tr=tiān'na|sc=Hani}}
 {{trans-mid}}
 * Finnish: {{t-|fi|herranjestas}},  {{t|fi|jestas sentään}}
-* French: {{t+|fr|Seigneur}}, {{t+|fr|mon Dieu}}, {{t+|fr|ciel}}
+* French: {{t+|fr|Seigneur}}, {{t+|fr|mon Dieu}}, {{t+|fr|ciel}}, {{t|fr|nom de Dieu}}
 {{trans-bottom}}
 
 ====Synonyms====
