/* Proper noun */ <Bosphorus#16010027>

--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -12,7 +12,7 @@
 ===Proper noun===
 {{en-proper noun|sg=the Bosphorus}}
 
-# A [[strait]] that passes through [[Istanbul]] (formerly [[Constantinople]]) from the [[Black Sea]] to the [[Sea of Marmara]], forming part of the traditional boundary between [[Europe]] and [[Asia]].
+# A [[strait]] that passes through [[Istanbul]] from the [[Black Sea]] to the [[Sea of Marmara]], forming part of the traditional boundary between [[Europe]] and [[Asia]].
 
 ====Translations====
 {{trans-top|A strait that passes through Istanbul}}
