/* Translations */ correct Latin expression; "potiusque..." means "AND better..." rather than just "better..." <better late than never#16071075>

--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -32,7 +32,7 @@ Perhaps a calque of the Latin phrase [[potiusque sero quam nunquam]] from the 4t
 * Hungarian: {{t+|hu|jobb későn, mint soha}}
 * Italian: {{t|it|meglio tardi che mai}}
 * Japanese: {{t|ja|遅くてもやらないよりまし|tr=おそくてもやらないよりまし, osokutemo yaranai yori mashi|sc=Jpan}} <!-- to check {{t|ja|良いことよりも遅く|tr=よいことよりもおそく, yoi koto-yori-mo osoku|sc=Jpan}} -->
-* Latin: {{t|la|potiusque sero quam nunquam}}
+* Latin: {{t|la|potius sero quam nunquam}}
 * Norwegian: {{t|no|bedre sent enn aldri}}, {{t|no|bedre seint enn aldri}}
 * Polish: {{t|pl|lepiej późno niż wcale}}
 * Portuguese: {{t-|pt|antes tarde do que nunca}}
