t+fr:[[pistolet à eau]] ([[WT:EDIT|Assisted]]) <squirt gun#16078355>

--- a/en/s/squirt gun.855129.wikitext
+++ b/en/s/squirt gun.855129.wikitext
@@ -15,6 +15,7 @@
 {{trans-top|a toy gun used to shoot water}}
 * Czech: {{t-|cs|stříkací pistole|f}}
 {{trans-mid}}
+* French: {{t|fr|pistolet à eau|m}}
 {{trans-bottom}}
 
 [[et:squirt gun]]
