{{en-noun}} <feith#16096573>

--- a/en/f/feith.775874.wikitext
+++ b/en/f/feith.775874.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''feith'''
+{{en-noun}}
 
 # {{obsolete spelling of|faith}}
 
@@ -15,8 +15,8 @@
 ===Verb===
 {{head|gd|verb|verbal noun|feitheamh}}
 
-# [[wait]]
-# [[stay]], [[remain]]
+# to [[wait]]
+# to [[stay]], [[remain]]
 
 ====Synonyms====
 * {{l|gd|fan}}
